# tspmo

./: .gitignore  README.md  cli.py  llm_client.py  pyproject.toml  tspmo
core/: analyzer.py  suggestor.py
tests/: test_analyzer.py  test_suggestor.py
utils/: __init__.py  history.py
