[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-fixit"
version = "0.1.0"
description = "A CLI tool to fix shell command errors using a local LLM (Qwen Coder via Ollama)"
authors = [
    { name="Your Name", email="your@email.com" }
]
dependencies = [
    "requests"
]
requires-python = ">=3.8"
